// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers settingsReducer should correctly closeSettingsMenu 1`] = `
Object {
  "activeSubMenu": null,
  "isSettingsMenuOpen": false,
}
`;

exports[`reducers settingsReducer should correctly openSettings 1`] = `
Object {
  "activeSubMenu": null,
  "isSettingsMenuOpen": true,
}
`;

exports[`reducers settingsReducer should handle initial state 1`] = `
Object {
  "activeSubMenu": null,
  "isSettingsMenuOpen": false,
}
`;
